--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "js-csp": "^0.7.0",
     "lodash": "^4.15.0",
     "readline": "^1.3.0"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.36",
+    "@types/node": "^6.0.41"
   }
 }
